# Checkers_Game_Qt_Cplusplus

./: .gitignore
Checkers/: CMakeLists.txt  board.cpp  board.h  common.h  game_window.cpp  game_window.h  game_window.ui  logic.cpp  logic.h  main.cpp  piece.cpp  piece.h  tile.cpp  tile.h
CheckersTest/: CMakeLists.txt  main.cpp
